# liquidhaskell

./: NVTODO.md  liquidhaskell.cabal  stack.yaml
liquiddialog/: liquiddialog.cabal
liquiddialog/src/: Main.hs
liquiddialog/src/Graphics/UI/Parallel/Select/: DrawSolutions.hs  Types.hs
liquiddialog/src/Graphics/UI/Select/: DrawSolutions.hs  Types.hs
tests/gradual/pos/: Gradual.hs  Interpretations.hs  Variations.hs
tests/gradual/todo/: Measures.hs
